left align all text columns, right justify all numeric columns, fix responsive text formatting

--- a/client/styles.css
+++ b/client/styles.css
@@ -27,6 +27,7 @@ th {
   padding: 10px;
   background-color: #4CAF50;
   color: white;
+  text-align: center;
 }
 
 table, td {
@@ -34,7 +35,7 @@ table, td {
   padding: 5px;
   /*white-space: nowrap;*/
   /*overflow-x: hidden;*/
-  text-align: right;
+  /*text-align: right;*/
 }
 
 tr:nth-child(even) {
@@ -44,6 +45,14 @@ tr:nth-child(even) {
 tr:hover {
   background-color: yellow;
 }
+
+/*right justify the numeric columns only*/
+tr > td:nth-child(5) {text-align: center}
+tr > td:nth-child(6) {text-align: right} 
+tr > td:nth-child(7) {text-align: right} 
+tr > td:nth-child(8) {text-align: right} 
+tr > td:nth-child(9) {text-align: right} 
+tr > td:nth-child(10) {text-align: right} 
 
 @media 
   only screen and (max-width: 760px),
@@ -77,12 +86,24 @@ tr:hover {
     white-space: nowrap;
   }
   
-  /* Label the data */
-  td:nth-of-type(1):before { content: ""; }
-  td:nth-of-type(2):before { content: "SKU:"; }
-  td:nth-of-type(3):before { content: "ASIN:"; }
-  td:nth-of-type(4):before { content: "Title:"; }
-  td:nth-of-type(5):before { content: "Quantity:"; }
+  /* Label the data and change alignment when appropriate */
+  td:nth-of-type(2):before {
+    content: "SKU:";
+    text-align: right;
+  }
+  td:nth-of-type(3):before {
+    content: "ASIN:";
+    text-align: right;
+  }
+  td:nth-of-type(4):before {
+    content: "Title:";
+    text-align: right;
+  }
+  td:nth-of-type(5):before {
+    content: "Quantity:";
+    text-align: right;
+  }
+  tr > td:nth-child(5) {text-align: right}
   td:nth-of-type(6):before { content: "Cost:"; }
   td:nth-of-type(7):before { content: "FBM Price:"; }
   td:nth-of-type(8):before { content: "FBM Price:"; }
@@ -101,21 +122,19 @@ and (max-device-width : 480px) {
   }
 
 /* iPads */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-  body { 
-    width: 495px; 
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) {
+    body { 
+      width: 495px; 
+    }
   }
-}
-
-.tableDiv {
-  overflow-x: auto;
-}
 
 /*Makes the slidey thing white*/
 :global(.style__pointer___XKUds){
   background-color: white;
   height: 7px;
-  margin-top: -7px
+  margin-top: -7px;
 }
 
 /* Makes the navbar blue */
@@ -125,13 +144,6 @@ and (max-device-width : 480px) {
   width: 100%;
   /*height: 70px*/
 }
-
-/* Makes the selected tab's text */
-:global(.style__label___V031b.style__active___lY_Ar){
-  color: white;
-}
-
-
 
 /* Should hopefully make the tab thing fixed
 :global(.style__navigation___VJ4pk){
@@ -256,11 +268,6 @@ and (max-device-width : 480px) {
 .detailChart {
   max-width: 500px;
 }
-
-/*.shortInputField{
-  height: 20px;
-  width: 100px;
-}*/
 
 /* Table on the dashboard */
 #table{
